--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="" />
   <title>Jorveig</title>
+  <base href="%PUBLIC_URL%/" />
 </head>
 
 <body>
